project 1 + starter code

--- a/lessons/02/notebooks/2017-03-15_Pandas-starter-code.ipynb
+++ b/lessons/02/notebooks/2017-03-15_Pandas-starter-code.ipynb
@@ -7,7 +7,11 @@
     "editable": true
    },
    "source": [
-    "Pandas cheat sheet: https://github.com/pandas-dev/pandas/blob/master/doc/cheatsheet/Pandas_Cheat_Sheet.pdf"
+    "pandas cheat sheet: https://github.com/pandas-dev/pandas/blob/master/doc/cheatsheet/Pandas_Cheat_Sheet.pdf\n",
+    "\n",
+    "pandas data structures: http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dsintro\n",
+    "\n",
+    "clone repo: https://github.com/rudeboybert/JSE_OkCupid"
    ]
   },
   {
