--- a/unit-projects/1/notebooks/unit-project-1-sample.ipynb
+++ b/unit-projects/1/notebooks/unit-project-1-sample.ipynb
@@ -4,118 +4,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 1 example  "
+    "# DS-SF-30 | Unit Project 1 Sample"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read and evaluate the following problem statement: \n",
-    "Using Planet Express customer data from January 3001-3005, determine how likely previous customers are to request a repeat delivery using demographic information (profession, company size, location) and previous delivery data (days since last delivery, number of total deliveries).\n"
+    "## Part A.  Evaluate the following problem statement:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "> \"Using Planet Express customer data from January 3001-3005, determine how likely previous customers are to request a repeat delivery using demographic information (profession, company size, location) and previous delivery data (days since last delivery, number of total deliveries).\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. What is the outcome?"
+    "> ### Question 1.  What is the outcome?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: return customer indicator (yes/no)"
+    "Answer: Return customer indicator (`yes` or `no`)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. What are the predictors/covariates? "
+    "> ### Question 2.  What are the predictors/covariates?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: age, gender, location, date of first deliveries and profession, days since last delivery, number of total deliveries"
+    "Answer: Age, gender, location, date of first deliveries, profession, days since last delivery, and number of total deliveries."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. What timeframe is this data relevent for?"
+    "> ### Question 3.  What timeframe is this data relevent for?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Jan 3001-3005"
+    "Answer: January 3001-3005."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. What is the hypothesis?"
+    "> ### Question 4.  What is the hypothesis?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Demographic and previous delivery info will allow us to predict if a customer will be a repeat customer"
+    "Answer: Demographic and previous delivery information will allow us to predict if a customer will be a repeat customer."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's begin by exploring the dataset\n"
+    "## Part B.  Let's start exploring our UCLA dataset and answer some simple questions:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. create a data dictionary "
+    "> ### Question 5.  Create a data dictionary."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: \n",
+    "Answer:\n",
     "\n",
     "Variable | Description | Type of Variable\n",
     "---| ---| ---\n",
     "Profession |Title of the account owner  | categorical\n",
     "Company Size | 1- small, 2- medium, 3- large| categorical\n",
-    "Location | planet of the company | categorical \n",
+    "Location | planet of the company | categorical\n",
     "Days Since Last Delivery | integer | continuous\n",
-    "Number of Deliveries | integer | continuous\n",
-    "\n"
+    "Number of Deliveries | integer | continuous"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
