--- a/lessons/02/notebooks/2017-03-15_Pandas-starter-code.ipynb
+++ b/lessons/02/notebooks/2017-03-15_Pandas-starter-code.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "pandas data structures: http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dsintro\n",
     "\n",
+    "10-minute pandas: http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dsintro\n",
+    "\n",
     "clone repo: https://github.com/rudeboybert/JSE_OkCupid"
    ]
   },
