--- a/lessons/02/notebooks/homework-02-the-pandas-library-starter-code.ipynb
+++ b/lessons/02/notebooks/homework-02-the-pandas-library-starter-code.ipynb
@@ -27,7 +27,7 @@
     "editable": true
    },
    "source": [
-    "> ## Question 1.  Import `pandas` (as `pd`)."
+    "> ## Question 1.  Import `pandas` (as `pd`). Read the dataset dataset-02-ozone.csv found in the data folder `../data/dataset-02-ozone.csv`"
    ]
   },
   {
@@ -44,22 +44,7 @@
     "\n",
     "# TODO\n",
     "\n",
-    "pd.set_option('display.max_rows', 10)\n",
-    "pd.set_option('display.notebook_repr_html', True)\n",
-    "pd.set_option('display.max_columns', 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(os.path.join('..', 'datasets', 'dataset-02-ozone.csv'))"
+    "pd.read_csv?"
    ]
   },
   {
