--- a/lessons/01/notebooks/2017-03-13_Intro.ipynb
+++ b/lessons/01/notebooks/2017-03-13_Intro.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,15 +53,22 @@
        "55"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''Create a function with three arguments'''\n",
     "def max_of_three(a,b,c):\n",
+    "    \n",
+    "    # Create variable which takes the max() operation for three variables\n",
     "    num = max(a,b,c)\n",
+    "    \n",
+    "    # Return the variable\n",
     "    return num\n",
+    "\n",
+    "# Call the function\n",
     "max_of_three(55,22,2)"
    ]
   },
@@ -75,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e\n"
+      "i\n"
      ]
     },
     {
@@ -91,14 +98,19 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''Create function which takes one argument'''\n",
     "def is_vowel(string):\n",
+    "    \n",
+    "    # Length of string needs to be one\n",
     "    if len(string) == 1:\n",
+    "        \n",
+    "        # Check if string is a vowel\n",
     "        if string in (\"a\",\"e\",\"i\",\"o\",\"u\"):\n",
     "            return True\n",
     "        else:\n",
@@ -118,17 +130,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hey\n",
+      "['h', 'e', 'y']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'yeh'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''Create function that takes one argument'''\n",
     "def reverse_string(string):\n",
+    "    \n",
+    "    # Get the length of the string \n",
     "    length = len(string)\n",
+    "    \n",
+    "    # Set each character of the string to an individual string in a list\n",
     "    full = list(string)\n",
+    "\n",
+    "    # Create new variable to receive the new string\n",
     "    new = \"\"\n",
-    "    if length != 0:        \n",
+    "    \n",
+    "    # Check if length is more than 0\n",
+    "    if length > 0:        \n",
+    "        \n",
+    "        # Loop through the number of characters in the string\n",
     "        for i in range(length):\n",
+    "            \n",
+    "            # Make each individual character of the string equal to its negative value in anoter string\n",
     "            full[i] = string[length-(1+i)]\n",
+    "            \n",
+    "        # Join all separate characters into a single string    \n",
     "        new = \"\".join(full)\n",
     "        return new\n",
     "    else:\n",
@@ -146,15 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thaht\n",
+      "success\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_string(string):\n",
     "    length = len(string)\n",
     "    full = list(string)\n",
     "    new = \"\"\n",
-    "    if length != 0:        \n",
+    "    if length > 0:        \n",
     "        for i in range(length):\n",
     "            full[i] = string[length-(1+i)]\n",
     "        new = \"\".join(full)\n",
@@ -189,6 +244,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "5 bottles of beer on the wall, 5 bottles of beer.\n",
+      "Take one down, pass it around, 4 bottles of beer on the wall.\n",
+      "4\n",
+      "4 bottles of beer on the wall, 4 bottles of beer.\n",
+      "Take one down, pass it around, 3 bottles of beer on the wall.\n",
+      "3\n",
+      "3 bottles of beer on the wall, 3 bottles of beer.\n",
+      "Take one down, pass it around, 2 bottles of beer on the wall.\n",
+      "2\n",
+      "2 bottles of beer on the wall, 2 bottles of beer.\n",
+      "Take one down, pass it around, 1 bottles of beer on the wall.\n",
+      "1\n",
+      "1 bottles of beer on the wall, 1 bottles of beer.\n",
+      "Take one down, pass it around, 0 bottles of beer on the wall.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bottles(x):\n",
+    "    i = 0\n",
+    "    x = int(x)\n",
+    "    a = x\n",
+    "    \n",
+    "    for b in range(a):\n",
+    "        print (\"%d bottles of beer on the wall, %d bottles of beer.\" % (a,a))\n",
+    "        a -= 1\n",
+    "        print (\"Take one down, pass it around, %s bottles of beer on the wall.\" % (a))\n",
+    "    \n",
+    "bottles(input())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -199,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -242,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def division(x,y):\n",
@@ -260,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "my_string = \"the cow jumped over the moon\"\n",
@@ -280,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "6"
@@ -297,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "total = [len(x) for x in words]\n",
@@ -315,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\" \".join(words)"
@@ -332,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\" || \".join(words)"
@@ -350,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = {'a':10, 'b':20, 'c':30}\n",
@@ -368,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "type('a')"
@@ -385,7 +500,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d['c'] = 40\n",
@@ -405,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "people = {'Alice': ['Washington', 'DC'], 'Brandon': ['Arlington', 'VA']}\n",
@@ -476,7 +595,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
